--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -487,7 +487,8 @@
                 <dt>{{vm.room.relatedPropertyId.state}}</dt>
                   </div>
                 </div>
-
+                <br/>
+                Note: address is not editable.
               </div>
 
             </div>
