--- a/client/app/rooms/add.room/add.room.html
+++ b/client/app/rooms/add.room/add.room.html
@@ -338,7 +338,7 @@
           <!--  Address box  -->
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="page-header">
-              <h2> Address </h2>
+              <h2>Your Current Address</h2>
             </div>
             <div class="white-box pets">
 
