--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -72,7 +72,7 @@
 
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-            <a class="contact-bubble-email pull-right" ng-href="mailto:{{room.me.email}}?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>
+            <a class="contact-bubble-email pull-right" ng-href="mailto:{{room.creatorEmail}}?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>
 
             <!--<a class="contact-bubble-email" href="" target="_top"><i class="fa fa-facebook fa-lg"></i></a>-->
             <!-- Facebook link commented out for now -->
