--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -20,7 +20,7 @@
               <dt>University</dt>
               <dd>{{myProfile.education.educationCenterName}}</dd>
               <dt>Year</dt>
-              <dd>{{myProfile.education.startDate | date:'yyyy'}}</dd>
+              <dd>{{myProfile.education.graduationDate | date:'yyyy'}}</dd>
               <dt>Major</dt>
               <dd>{{myProfile.education.major}}</dd>
               <dt>About Me</dt>
