--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -56,7 +56,7 @@
 
             <div ng-show="!room.userCurrentAddressAndUnivCoords.length">
               <br>
-              <h3><a ui-sref="dashboard.myProfile">Update Profile</a> & view distance from your university</h3>
+              <h3><a ui-sref="myProfile">Update Profile</a> & view distance from your university</h3>
             </div>
 
             <table class="specs">
