--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -1,9 +1,11 @@
+<div ng-include="'components/layout/navbar/navbar.html'"></div>
+<div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
 <div class="main-wrapper">
   <div class="container my-profile" cg-busy="{promise:myProfile.me.$promise, message:'Loading Your Profile', delay:50}">
     <div ui-view="">
       <div class="page-header">
         <h2> Your Profile </h2>
-        <a class="bubble edit-profile" ui-sref=".editProfile"> <i class="fa fa-pencil"></i> </a>
+        <a class="bubble edit-profile" ui-sref="editProfile"> <i class="fa fa-pencil"></i> </a>
       </div>
       <div class="white-box">
         <div class="row about-me">
@@ -70,8 +72,8 @@
               <angucomplete-alt id="members"
               placeholder="Search for roommate"
               pause="400"
-              selected-object="addNewRoommate"
-              local-data="myProfile.users.data"
+              selected-object="myProfile.addNewRoommate"
+              local-data="myProfile.users"
               search-fields="email"
               title-field="firstname,lastname"
               description-field="email"
