--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -17,7 +17,8 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <slick dots="true" class="slider" init-onload="true" data="rooms.groups" slides-to-show="1" slides-to-scroll="1" >
         <div ng-repeat="group in rooms.groups" class="row">
-          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 room" ng-repeat="room in group ">
+          <!--ng-if="room.roomDetails.creatorId!==rooms.me.id" to not show own user room listings-->
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 room" ng-repeat="room in group">
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
               <div class="flipper">
                 <div class="front white-box">
