CSS and wording changes to home page, looking detail, Profile, room detail

--- a/client/app/dashboard/looking/looking-details/looking.detail.html
+++ b/client/app/dashboard/looking/looking-details/looking.detail.html
@@ -75,7 +75,7 @@
 
       <!-- Details on the Looking post -->
 
-      <h2>Looking</h2>
+      <h2 class="section-title">Looking</h2>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
         <!--start of first col 4-->
         <div class="col-md-4">
