--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -43,7 +43,7 @@
 
   <div class="row featurette">
     <div class="col-sm-7">
-      <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span></h2>
+      <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span><sup style="font-size: 40%; top: -1em;">(Coming Soon)</sup></h2>
       <ul class="icon-list">
         <li><img class="icons" src="./../assets/images/mini-icons/bubbles4.svg" /> Meet new students around you
           <ul class="icon-list">
