--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -42,7 +42,7 @@
                     <li><i class="fa fa-bed"></i> {{room.roomDetails.roomType}}</li>
                     <li><i class="fa fa-users"></i> {{room.roomDetails.numRoomates}} roommates</li>
                     <li><i class="fa fa-shower"></i> {{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>
-                    <li><i class="fa fa-calendar"></i> {{room.roomDetails.availableMoveIn | date }}</li>
+                    <li><i class="fa fa-arrow-right"></i> {{room.roomDetails.availableMoveIn | date }}</li>
                   </ul>
                 </div>
                 <div class="back">
