--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -95,7 +95,7 @@
 
 
 <div class="page-header">
-  <h2> Address Data </h2>
+  <h2> Current Address </h2>
 </div>
 <div class="white-box">
   <div class="row">
