--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -45,7 +45,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <div class="page-header">
-            <h2> Roommates </h2>
+            <h2 class="section-title"> Roommates </h2>
             <a class="bubble edit-profile" ng-click="myProfile.toggleRoommatesAddon()">
               <i class="fa fa-plus" ng-hide="myProfile.showRoommatesAddonButtons"></i>
               <i class="fa fa-minus" ng-show="myProfile.showRoommatesAddonButtons"></i>
@@ -67,7 +67,7 @@
 
             <div ng-show="myProfile.showAddRoommate">
               <a class="bubble cancel" ng-click="myProfile.cancelRoommateAddAddon()"><i class="fa fa-close"></i></a>
-              <h3>Search for your Roommate using by email. </h3>
+              <h3>Search for your roommate by email address</h3>
 
               <angucomplete-alt id="members"
               placeholder="Search for roommate"
@@ -95,16 +95,14 @@
               <div class="col-xs-2">
                 <div class="picture">
                   <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle">
-                  <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user" style="font-size:80px"></i>
+                  <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-4x"></i>
                 </div>
               </div>
               <div class="col-xs-6 info">
                 <span class="name"> {{roommate.relatedRoommateId.firstname}} {{roommate.relatedRoommateId.lastname}} </span>
                 <span class="email">{{roommate.relatedRoommateId.email}}</span>
                 <span class="university" ng-if="roommate.relatedRoommateId.usereducationUsers[0].educationCenterName">{{roommate.relatedRoommateId.usereducationUsers[0].educationCenterName}}</span>
-                <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName">User didn't provide education data</span>
-                <span class="city" ng-if="roommate.relatedRoommateId.addresshistoryUsers.length">{{roommate.relatedRoommateId.addresshistoryUsers[0].zip}} {{roommate.relatedRoommateId.addresshistoryUsers[0].city}} / {{roommate.relatedRoommateId.addresshistoryUsers[0].state}}</span>
-                <span class="city" ng-if="!roommate.relatedRoommateId.addresshistoryUsers.length">User didn't provide address data</span>
+                <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName">University not added</span>
               </div>
               <div class="actions col-xs-4">
                 <a class="bubble remove" ng-click="myProfile.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
@@ -117,7 +115,7 @@
         <!--  PET & VEHICLE BOX  -->
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <div class="page-header">
-            <h2> Pets & Vehicles </h2>
+            <h2 class="section-title"> Pets & Vehicles </h2>
             <a class="bubble edit-profile" ng-click="myProfile.togglePetAddon()">
               <i class="fa fa-plus" ng-hide="myProfile.showPetAddonButtons"></i>
               <i class="fa fa-minus" ng-show="myProfile.showPetAddonButtons"></i>
