--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -98,7 +98,7 @@
 
     <div class="row">
       <div class="page-header">
-        <h2>Roommates</h2>
+        <h2 class="section-title">Roommates</h2>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 roommates white-box">
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" class="row roomRoommates" ng-repeat="roommate in room.creatorRoommates">
@@ -122,7 +122,7 @@
 
     <div class="row">
       <div class="page-header">
-        <h2>More Info</h2>
+        <h2 class="section-title">More Info</h2>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 details white-box">
         <h3>Room description</h3>
