--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -1,20 +1,23 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
 <div class="main-wrapper">
-<div class="container edit-profile" cg-busy="{promise:editProfile.initializeData.$promise, message:'Loading Your Profile', delay:50}">
+<div class="container edit-profile">
   <div class="page-header">
     <h2> Personal </h2>
   </div>
+
+  <!-- Personal info -->
+
   <div class="white-box">
     <div class="row about-me">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <form class="form" name="personalDataForm" ng-submit="editProfile.changePersonalData(personalDataForm)" novalidate>
           <div class="row">
 
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
               <div class="picture text-center">
                 <img ng-if="editProfile.me.profileImage" ng-src="api/images{{editProfile.me.profileImage}}" class="img-circle">
-                <i ng-if="!editProfile.me.profileImage" class="fa fa-user" style="font-size:120px"></i>
+                <i ng-if="!editProfile.me.profileImage" class="fa fa-user fa-5x"></i>
                 <input type="file" nv-file-select uploader="editProfile.uploader" id="fileUpload"/>
                 <ul>
                   <li ng-repeat="item in editProfile.uploader.queue">
@@ -24,23 +27,22 @@
               </div>
             </div>
 
-            <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-              <div class="form-group">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
+              <div class="form-group input-post">
                 <label>First Name</label>
                 <input class="form-control" type="text" id="firstname" name="firstname" ng-model="editProfile.tempMe.firstname"/>
               </div>
-              <div class="form-group">
+              <div class="form-group input-post">
                 <label>Last Name</label>
                 <input class="form-control" type="text" id="lastname" name="lastname" ng-model="editProfile.tempMe.lastname"/>
               </div>
-              <div class="form-group">
-                <label> About Me</label>
-                <textarea class="form-control" ng-model="editProfile.tempMe.aboutMe"></textarea>
+              <div class="form-group input-post-2">
+                <label>About Me</label>
+                <textarea class="form-control" cols="50" rows="2" ng-model="editProfile.tempMe.aboutMe"></textarea>
               </div>
-              <div class="form-group">
-                <label> Phone Number</label>
+              <div class="form-group input-post">
+                <label>Phone Number</label>
                 <input class="form-control" type="text" id="phone" name="phone" ng-model="editProfile.tempMe.phone" ui-mask="999-999-9999">
-
               </div>
             </div>
           </div>
@@ -50,85 +52,135 @@
     </div>
   </div>
 
+  <!-- University -->
+
   <div class="page-header">
-    <h2> University </h2>
+    <h2 class="section-title">University </h2>
   </div>
   <div class="white-box">
     <div class="row">
+
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="form-group">
-          <label for="educationCenterName">University name</label>
-          <select id="educationCenterName" class="form-control"
-          data-ng-model="editProfile.tempEducation.educationCenterName"
-          data-ng-options="university as university.name for university in editProfile.universitiesList"
-          ng-init="editProfile.tempEducation.educationCenterName=editProfile.universitiesList[editProfile.tempEducation.universityId-1]">
-        </select>
-      </div>
 
-      <!-- TODO Fix graduation date from start date in ng-model -->
+        <div class="row">
 
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="form-group">
-            <label for="start">Graduation date</label>
-            <p class="input-group">
-              <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate" is-open="datePickers.EducationStartDate" close-text="Close" />
+          <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
+            <div class="form-group input-post">
+              <label for="educationCenterName">University name</label>
+              <select id="educationCenterName" class="form-control"
+                      data-ng-model="editProfile.tempEducation.educationCenterName"
+                      data-ng-options="university as university.name for university in editProfile.universitiesList"
+                      ng-init="editProfile.tempEducation.educationCenterName=editProfile.universitiesList[editProfile.tempEducation.universityId-1]">
+              </select>
+            </div>
+
+            <div class="form-group input-post">
+              <label for="major">Major</label>
+              <input type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major"/>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
+            <div class="form-group input-post">
+              <label for="start">Graduation date</label>
+              <p class="input-group">
+                <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate" is-open="datePickers.EducationStartDate" close-text="Close" />
               <span class="input-group-btn">
                 <button type="btn-rented-medium primary" class="btn" ng-click="open($event,'EducationStartDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
-            </p>
+              </p>
+            </div>
           </div>
         </div>
+
+        <button class="btn-rented-medium primary pull-right" ng-click="editProfile.saveEducation(editProfile.tempEducation)">Save</button>
+
       </div>
 
-      <label for="major">Major</label>
-      <input type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major"/>
-
-      <br/>
-
-      <button class="btn-rented-medium primary pull-right" ng-click="editProfile.saveEducation(editProfile.tempEducation)">Save</button>
-
     </div>
 
   </div>
-</div>
 
+  <!-- Current Address -->
 
-<div class="page-header">
-  <h2> Current Address </h2>
-</div>
-<div class="white-box">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <label for="streetAddress">Address lookup</label>
-      <input  type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="editProfile.tempAddress.streetAddress"/>
+  <div class="page-header">
+    <h2 class="section-title">Current Address</h2>
+  </div>
+  <div class="white-box">
+    <div class="row">
 
-      <br>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-      <label for="streetNumber">Street Number</label>
-      <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly/>
+        <div class="row">
 
-      <label for="streetName">Street Name</label>
-      <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
+          <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
 
-      <label for="apt">Apt No.</label>
-      <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
+            <div class="form-group input-post">
 
-      <label for="zip">Zip Code</label>
-      <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly/>
+              <label for="streetAddress">Address lookup</label>
+              <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Start entering an address to autofill" address-autocomplete="editProfile.tempAddress.streetAddress"/>
 
-      <label for="city">City</label>
-      <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly/>
+            </div>
 
-      <label for="city">State</label>
-      <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly/>
-<pre>{{editProfile.tempAddress|json}}</pre>
-      <br>
+            <div class="form-group input-post-readonly">
 
-      <button class="btn-rented-medium primary pull-right" ng-click="editProfile.saveAddress(editProfile.tempAddress.streetAddress)">Save</button>
+              <label for="streetNumber">Street Number</label>
+              <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly/>
+
+            </div>
+
+            <div class="form-group input-post-readonly">
+
+              <label for="streetName">Street Name</label>
+              <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
+
+            </div>
+
+            <div class="form-group input-post">
+
+              <label for="apt">Apt No.</label>
+              <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
+
+            </div>
+
+            <div class="form-group input-post-readonly">
+
+              <label for="zip">Zip Code</label>
+              <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly/>
+
+            </div>
+
+            <div class="form-group input-post-readonly">
+
+              <label for="city">City</label>
+              <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly/>
+
+            </div>
+
+            <div class="form-group input-post-readonly">
+
+              <label for="city">State</label>
+              <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly/>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <button class="btn-rented-medium primary pull-right" ng-click="editProfile.saveAddress(editProfile.tempAddress.streetAddress)">Save</button>
+
+      </div>
+
     </div>
   </div>
+
 </div>
+
+
+
 
 </div>
 </div>
