Helper text for posting a looking

--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -5,7 +5,9 @@
   <div class="row">
     <div class="page-header">
       <h2>Post Looking</h2>
+      <p style="padding-bottom: 20px">Tell other students what kind of room you are looking for.</p>
     </div>
+
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
 
     <!--start of first col 4-->
@@ -249,9 +251,9 @@
       <!-- Meet new roommates -->
 
       <div class="row post-padding">
-        <div class="col-xs-10 col-sm-10 col-xs-offset-2 col-sm-offset-2 input-post">
+        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xs-offset-2 col-sm-offset-2 input-post">
+          <label for="openToFullYearLeaseNewRoomates">Are you looking for new roommates as well?</label>
           <input type="checkbox" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" id="openToFullYearLeaseNewRoomates"/>
-          <label for="openToFullYearLeaseNewRoomates">Want to meet new roomates?</label><br/>
         </div>
       </div>
     </div>
