--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -1,7 +1,7 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
 <div class="main-wrapper">
-  <div class="container my-profile" cg-busy="{promise:myProfile.me.$promise, message:'Loading Your Profile', delay:50">
+  <div class="container my-profile" cg-busy="{promise:myProfile.me.$promise, message:'Loading Your Profile', delay:50}">
     <div ui-view="">
       <div class="page-header">
         <h2> Your Profile </h2>
