Added feedback text on dashboard and updated contact us link with feedback email. Updated Navbar design and layout. Added html placeholders for terms and privacy policy

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -26,6 +26,14 @@
               <a  class="btn btn-secondary btn-block" ui-sref="myProfile"> Complete Profile </a>
             </div>
           </div>
+
+          <div class="feedback">
+
+            <h3>Your feedback is valuable</h3>
+            <p>Please <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">contact us</a> to help improve Campusly.</p>
+
+          </div>
+
         </div>
 
         <!-- Available Rooms -->
